Fix last listings prices overlapped or not shown

--- a/front-gateway/src/components/Search/style/filter.scss
+++ b/front-gateway/src/components/Search/style/filter.scss
@@ -36,6 +36,7 @@
 
   @media (min-width: $screen-sm-min) {
     padding: 20px 15px;
+    position: absolute;
     width: 100%;
   }
 }
